"no per-fuel MW value" is not an error